[gd_scene load_steps=3 format=3 uid="uid://cm02uehw506nt"]

[ext_resource type="Texture2D" uid="uid://c6ufp14dqs3ou" path="res://art/WIP/DFFS_Character edge highlight poc.png" id="2_nudk7"]
[ext_resource type="Script" uid="uid://bt1if6bipdwt1" path="res://scripts/ui/main_menu.gd" id="3_wxwbn"]

[node name="Main" type="Node3D"]
script = ExtResource("3_wxwbn")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6

[node name="MapSelector" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -20.0
offset_right = 61.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadMap0" type="Button" parent="UI/MapSelector"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load first level"
icon = ExtResource("2_nudk7")

[node name="LoadMap1" type="Button" parent="UI/MapSelector"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load first level"

[node name="LoadMap2" type="Button" parent="UI/MapSelector"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load first level"

[node name="LoadMap3" type="Button" parent="UI/MapSelector"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load first level"

[node name="NinePatchRect" type="NinePatchRect" parent="UI/MapSelector"]
layout_mode = 2
patch_margin_left = 10

[node name="World" type="Node3D" parent="."]

[connection signal="pressed" from="UI/MapSelector/LoadMap0" to="." method="_on_load_map_0_pressed"]
